syntax = "proto3";

option java_package = "com.protointerfaces.grpc";
option java_outer_classname = "ServiceUsuarioProto";

service ServiceUsuario {
    rpc GetUsuarios (Empty) returns (Usuarios);
    rpc CreateUsuario (Usuario) returns (Response);
}

message Empty {}

message Usuario {
    string firstname = 1;
    string lastname = 2;
    string email = 3;
    string address = 4;
    int64 id = 5;
}

message Usuarios {
    repeated Usuario users = 1;
}

message Response {
    string msg = 1;
    bool status = 2;
}
